[package]
name = "py-like"
version = "0.1.1"
edition = "2021"
authors = ["Julyfun"]
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md", "COPYRIGHT"]
license = "MIT"
description = """
Genshin language should have its own type() and input() like python.
"""
homepage = "https://mfans.fans"
documentation = "https://mfans.fans"
readme = "README.md"
repository = "https://github.com/julyfun/py-like"
keywords = ["python", "io"]

[dependencies]
